--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div id="cardone" data_cardone data_cardpost>
                 <div class="card cardone">
                     <div class="elementodocard">Tecnologia</div>
-                    <img class="image1" src="/Imagens/Imagem circuito.jpg">
+                    <img class="image1" src="/Imagem circuito.jpg">
                     <img class="image" src="/Imagens/mostrar.png" alt="card2" id="image2" />
                     <span class="view-count" id="view-count-cardone" data_views_cardone>0</span>
                     <h2>Avanço na Inteligência Artificial Impulsiona a Medicina Personalizada</h2>
