--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             <div id="cardone" data_cardone data_cardpost>
                 <div class="card cardone">
                     <div class="elementodocard">Tecnologia</div>
-                    <img class="image1" src="/Imagens/circuito.jpg">
-                    <img class="image" src="/Imagens/mostrar.png" alt="card2" id="image2" />
+                    <img class="image1" src="Imagens/circuito.jpg">
+                    <img class="image" src="Imagens/mostrar.png" alt="card2" id="image2" />
                     <span class="view-count" id="view-count-cardone" data_views_cardone>0</span>
                     <h2>Avanço na Inteligência Artificial Impulsiona a Medicina Personalizada</h2>
 
@@ -59,8 +59,8 @@
 
                 <div class="card cardtwo">
                     <div class="elementodocardtwo">Programação</div>
-                    <img class="image2" src="/Imagens/programacao.jpg">
-                    <img class="image" src="/Imagens/mostrar.png" alt="card2" />
+                    <img class="image2" src="Imagens/programacao.jpg">
+                    <img class="image" src="Imagens/mostrar.png" alt="card2" />
                     <span class="view-count" id="view-count-cardtwo" data_views_cardtwo>0</span>
                     <h2>Programação funcional, futuro da programação?</h2>
 
@@ -78,8 +78,8 @@
 
                 <div class="card cardtree" id="cardtree">
                     <div class="elementodocardtree">Robótica</div>
-                    <img class="image3" src="/Imagens/robotica.jpg">
-                    <img class="image" src="/Imagens/mostrar.png" alt="card3" />
+                    <img class="image3" src="Imagens/robotica.jpg">
+                    <img class="image" src="Imagens/mostrar.png" alt="card3" />
                     <span class="view-count" id="view-count-cardtree" data_views_cardtree>0</span>
                     <h2>Robótica bioinspirada e suas tecnológias. </h2>
 
@@ -98,8 +98,8 @@
 
                 <div class="card cardfour" id="cardfour">
                     <div class="elementodocardfour">Ciber Segurança</div>
-                    <img class="image4" src="/Imagens/Ciber.jpg" alt="card4">
-                    <img class="image" src="/Imagens/mostrar.png" alt="card4" />
+                    <img class="image4" src="Imagens/Ciber.jpg" alt="card4">
+                    <img class="image" src="Imagens/mostrar.png" alt="card4" />
                     <span class="view-count" id="view-count-cardfour" data_views_cardfour>0</span>
                     <h2>Como proteger seus dados corporativos de ataques cibernéticos.</h2>
 
@@ -116,9 +116,9 @@
 
                 <div class="card cardfive" id="cardfive">
                     <div class="elementodocardfive">Ciber Segurança</div>
-                    <img class="image5" src="/Imagens/tendencias.jpg" alt="card5">
+                    <img class="image5" src="Imagens/tendencias.jpg" alt="card5">
                     <span class="view-count" id="view-count-cardfive" data_views_cardfive>0</span>
-                    <img class="image" src="/Imagens/mostrar.png" alt="card5" />
+                    <img class="image" src="Imagens/mostrar.png" alt="card5" />
                     <h2>As Tendências Emergentes em Cibersegurança.</h2>
 
                     <p> cibersegurança é um campo em constante evolução, à medida que ameaças cibernéticas se tornam
@@ -139,9 +139,9 @@
 
                 <div class="card cardsix" id="cardsix">
                     <div class="elementodocardsix">Robótica</div>
-                    <img class="image6" src="/Imagens/cirurgia_robotica.jpg" alt="card6">
+                    <img class="image6" src="Imagens/cirurgia_robotica.jpg" alt="card6">
                     <span class="view-count" id="view-count-cardsix" data_views_cardsix>0</span>
-                    <img class="image" src="/Imagens/mostrar.png" alt="card6" />
+                    <img class="image" src="Imagens/mostrar.png" alt="card6" />
                     <h2>Robôs realizam cirurgias cardíacas.</h2>
 
                     <p>Robôs conseguem realizar cirurgias cardíacas com a mesma precisão de humanos.</br>
@@ -163,9 +163,9 @@
 
                 <div class="card cardseven" id="cardseven">
                     <div class="elementodocardseven">Tecnologia</div>
-                    <img class="image7" src="/Imagens/metaverso.jpg" alt="card7">
+                    <img class="image7" src="Imagens/metaverso.jpg" alt="card7">
                     <span class="view-count" id="view-count-cardseven" data_views_cardseven>0</span>
-                    <img class="image" src="/Imagens/mostrar.png" alt="card7" />
+                    <img class="image" src="Imagens/mostrar.png" alt="card7" />
                     <h2>Metaverso, a internet que não é apenas virtual.</h2>
 
                     <p>Desenvolvedores de jogos autônomos, que trabalham por conta própria, estão ganhando espaço no
@@ -187,9 +187,9 @@
 
                 <div class="card cardeight" id="cardeight">
                     <div class="elementodocardeight">Games</div>
-                    <img class="image8" src="/Imagens/games.jpg" alt="card8">
+                    <img class="image8" src="Imagens/games.jpg" alt="card8">
                     <span class="view-count" id="view-count-cardeight" data_views_cardeight>0</span>
-                    <img class="image" src="/Imagens/mostrar.png" alt="card8" />
+                    <img class="image" src="Imagens/mostrar.png" alt="card8" />
                     <h2>Desenvolva o seu proprio jogo, e feche parceria com gigantes.</h2>
 
                     <p>O crescimento dos desenvolvedores autônomos de jogos é impulsionado por uma série de fatores,
@@ -206,9 +206,9 @@
 
                 <div class="card cardnine" id="cardnine">
                     <div class="elementodocardnine">Programação</div>
-                    <img class="image9" src="/Imagens/python.jpg" alt="card9">
+                    <img class="image9" src="Imagens/python.jpg" alt="card9">
                     <span class="view-count" id="view-count-cardnine" data_views_cardnine>0</span>
-                    <img class="image" src="/Imagens/mostrar.png" alt="card9" />
+                    <img class="image" src="Imagens/mostrar.png" alt="card9" />
                     <h2>Python 3.12.0 é lançado, e vai te surpreender com seu novo desempenho.</h2>
 
                     <p>O Python Software Foundation (PSF) anunciou o lançamento do Python 3.12.0rc1, a primeira release
@@ -228,9 +228,9 @@
 
                 <div class="card cardten" id="cardten">
                     <div class="elementodocardten">Games</div>
-                    <img class="image10" src="/Imagens/realidade virtual.jpg" alt="card10">
+                    <img class="image10" src="Imagens/realidade virtual.jpg" alt="card10">
                     <span class="view-count" id="view-count-cardten" data_views_cardten>0</span>
-                    <img class="image" src="/Imagens/mostrar.png" alt="card10" />
+                    <img class="image" src="Imagens/mostrar.png" alt="card10" />
                     <h2>O futuro dos jogos: realidade virtual, inteligência artificial e jogos em nuvem.</h2>
 
                     <p>O futuro dos jogos: realidade virtual, inteligência artificial e jogos em nuvem
