--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <body>
     <div class="dropdwn">
         <nav>
-            <a href="https://looka.com/editor/145807962" target="_blank">
+            <a href="https://looka.com/editor/145807962" target="_blank"><img class="logo"
+                    src="Imagens/cinza e azul.png"></a>
             <ul>
                 <li data_filter_all>Todas Categorias</li>
                 <li data_filter_technology>Tecnologia</a></li>
