--- a/postpage.html
+++ b/postpage.html
@@ -13,7 +13,7 @@
     <div class="dropdwn">
         <nav>
             <a href="https://looka.com/editor/145807962" target="_blank"><img class="logo"
-                    src="/Imagens/cinza e azul.png"></a>
+                    src="Imagens/cinza e azul.png"></a>
             <ul>
                 <li><a href="index.html">Página Inicial</a></li>
             </ul>
